<resources>
    <string name="app_name">Adamya Chetana</string>
    <string name="title_activity_scrolling">Survey</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="phone">Phone*</string>
    <string name="name">Name*</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="title_content_scrolling">Survey</string>
    <string name="survey">Survey</string>
    <string name="question1">1. How many times do you throw garbage in a week?</string>
    <string name="A1A">2</string>
    <string name="A1B">5</string>
    <string name="A1C">9</string>
    <string name="question2">2. How many kgs of garbage is thrown?</string>
    <string name="A2A">2</string>
    <string name="A2B">5</string>
    <string name="A2C">9</string>
    <string name="question3">3. How frequently does the garbage collector arrive in time per week?</string>
    <string name="A3A">4</string>
    <string name="A3B">6</string>
    <string name="A3C">1</string>
    <string name="question4">4. What is your name?</string>
    <string name="A4A">1</string>
    <string name="A4B">2</string>
    <string name="A4C">3</string>
    <string name="question5">5. What is your name?</string>
    <string name="A5A">1</string>
    <string name="A5B">2</string>
    <string name="A5C">3</string>
    <string name="question6">6. What is your name?</string>
    <string name="A6A">1</string>
    <string name="A6B">2</string>
    <string name="A6C">3</string>
    <string name="submit_form">Submit</string>
    <string name="hint">hint</string>
    <string name="send">send</string>
    <string name="thank_you">Thank You</string>
    <string name="a2a">A2A</string>
    <string name="utf8">UTF–8</string>
    <string name="ChoiceText">Choose one of the radio buttons below</string>
    <string name="Sound">Sound</string>
    <string name="Vibration">Vibration</string>
    <string name="Silent">Silent</string>
    <string name="Choose">Choose</string>

</resources>
