<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:shrinkColumns="*"
        android:stretchColumns="*" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:padding="18dip"
                android:text="@string/question1"
                android:textColor="#000000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4" >

                <RadioButton
                    android:id="@+id/answer1A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/A1A"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/answer1B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/A1B"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/answer1C"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/A1C"
                    android:textColor="#000000" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:padding="18dip"
                android:text="@string/question2"
                android:textColor="#000000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/answer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4" >

                <RadioButton
                    android:id="@+id/answer2A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/A2A"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/answer2B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/A2B"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/answer2C"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/A2C"
                    android:textColor="#000000" />
            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:padding="18dip"
                android:text="@string/question3"
                android:textColor="#000000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tableRow4">

            <RadioGroup
                android:id="@+id/answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4" >

                <RadioButton
                    android:id="@+id/answer3A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/A3A"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/answer3B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/A3B"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/answer3C"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/A3C"
                    android:textColor="#000000" />
            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:padding="18dip"
                android:text="@string/question4"
                android:textColor="#000000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tableRow5" >

            <RadioGroup
                android:id="@+id/answer4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4" >

                <RadioButton
                    android:id="@+id/answer4A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/A4A"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/answer4B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/A4B"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/answer4C"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/A4C"
                    android:textColor="#000000" />
            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:padding="18dip"
                android:text="@string/question5"
                android:textColor="#000000"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tableRow6" >

            <RadioGroup
                android:id="@+id/answer5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4" >

                <RadioButton
                    android:id="@+id/answer5A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/A5A"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/answer5B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/A5B"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/answer5C"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/A5C"
                    android:textColor="#000000" />
            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:padding="18dip"
                android:text="@string/question6"
                android:textColor="#000000"
                android:textSize="18sp" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tableRow7" >

            <RadioGroup
                android:id="@+id/answer6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4" >

                <RadioButton
                    android:id="@+id/answer6A"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/A6A"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/answer6B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/A6B"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/answer6C"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/A6C"
                    android:textColor="#000000" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/submit_form" />
        </TableRow>
    </TableLayout>

</ScrollView>

